--- a/src/main/asciidoc/dataobjects.adoc
+++ b/src/main/asciidoc/dataobjects.adoc
@@ -1,7 +1,7 @@
 = Cheatsheets
 
-[[Portfolio]]
-== Portfolio
+[[Company]]
+== Company
 
 ++++
  Created by Administrator on 2018/3/23.
@@ -13,7 +13,9 @@
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
-|[[cash]]`cash`|`Number (double)`|-
-|[[shares]]`shares`|`Number (Integer)`|-
+|[[address]]`address`|`String`|-
+|[[companyNo]]`companyNo`|`String`|-
+|[[id]]`id`|`Number (int)`|-
+|[[name]]`name`|`String`|-
 |===
 
